# unique-code-serverless

./: .gitignore  Dockerfile  README.md
micronaut-graalvm-java11/: README.md  bootstrap  build.gradle  build.sh
micronaut-graalvm-java11/builder/: Dockerfile
micronaut-graalvm-java11/terraform/: variables.tf
micronaut-java11/: README.md  build.gradle
micronaut-java11/terraform/: main.tf  variables.tf
other/: README.md  build.gradle
plain-go1_15/: README.md  build.sh  go.mod  go.sum  main.go
plain-go1_15/src/: createUniqueCodeRequest.go  randomCode.go
plain-go1_15/src/main/: createUniqueCodeRequest_test.go  main.go  randomCode_test.go
plain-go1_15/terraform/: main.tf  variables.tf
plain-java11/: README.md  build.gradle  settings.gradle
plain-java11/terraform/: main.tf  variables.tf
plain-rust1_49/: Cargo.toml  README.md  build.sh
plain-rust1_49/builder/: Dockerfile
plain-rust1_49/terraform/: variables.tf
plain-rust1_50/: Cargo.toml  README.md  build.sh
plain-rust1_50/builder/: Dockerfile
plain-rust1_50/src/: main.rs
plain-rust1_50/terraform/: main.tf
spring_cloud_function-java11/: README.md  build.gradle  build.sh
spring_cloud_function-java11/terraform/: .terraform.tfstate.lock.info  main.tf
spring_cloud_function-native_image-java11/: build.gradle  build.sh  settings.gradle
spring_cloud_function-native_image-java11/terraform/: variables.tf
src/main/java/demo/albertattard/uniquecode/: UniqueCode.java
src/test/java/demo/albertattard/uniquecode/: UniqueCodeControllerTest.java
terraform/: main.tf
(+36 files in other folders)
