[package]
name = "unique-code-serverless"
version = "1.0.0"
authors = ["Albert Attard <albertattard@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "0.3.0"
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
simple-error = "0.2.2"
futures = "0.3.9"
tokio = { version = "1.0.1", features = ["full"] }
rand = "0.8.1"
regex = "1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
